--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src --ignore-path .eslintignore --ext .ts",
+    "lint": "eslint src",
     "prettier": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint:fix": "npx eslint src --fix",
     "start:dev": "ts-node-dev --respawn --transpile-only src/server.ts",
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "gardenbook-server": "file:",
+    "globals": "^15.11.0",
     "http-status": "^1.7.4",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
