payment integreted and several bug fixed

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "gardenbook-server": "file:",
+    "root-n-rise-backend": "file:",
     "globals": "^15.11.0",
     "http-status": "^1.7.4",
     "http-status-codes": "^2.3.0",
@@ -29,6 +29,8 @@
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.16",
     "ts-node-dev": "^2.0.0",
     "zod": "^3.23.8"
   },
@@ -39,6 +41,8 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/multer": "^1.4.12",
+    "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.16",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
